crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__bumper_cars_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "VisitAttraction",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "GenericEffect",
          "static_abilities": [
            {
              "mode": {
                "MustBeBlocked": {
                  "by": null
                }
              },
              "affected": {
                "type": "ParentTarget"
              },
              "modifications": [
                {
                  "type": "AddStaticMode",
                  "mode": {
                    "MustBeBlocked": {
                      "by": null
                    }
                  }
                }
              ],
              "condition": null,
              "affected_zone": null,
              "effect_zone": null,
              "active_zones": [],
              "characteristic_defining": false,
              "description": null
            }
          ],
          "duration": "UntilEndOfTurn",
          "target": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": null,
            "properties": []
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": "UntilEndOfTurn",
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": null,
      "destination": null,
      "trigger_zones": [],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": null,
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
