crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__call_forth_the_tempest_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 267,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Cascade, cascade (When you cast this spell, exile cards from the top of your library until you exile a nonland card that costs less. You may cast it without paying its mana cost. Put the exiled cards on the bottom of your library in a random order. Then do it again.)"
      },
      "node": {
        "Keyword": "Cascade"
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 267,
          "precision": "Exact",
          "ordinal_within_span": 1
        },
        "fragment": "Cascade, cascade (When you cast this spell, exile cards from the top of your library until you exile a nonland card that costs less. You may cast it without paying its mana cost. Put the exiled cards on the bottom of your library in a random order. Then do it again.)"
      },
      "node": {
        "Keyword": "Cascade"
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 268,
          "end_byte": 391,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "~ deals damage to each creature your opponents control equal to the total mana value of other spells you've cast this turn."
      },
      "node": {
        "Spell": {
          "source_text": "~ deals damage to each creature your opponents control equal to the total mana value of other spells you've cast this turn.",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 122,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "~ deals damage to each creature your opponents control equal to the total mana value of other spells you've cast this turn"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "DamageAll",
                    "amount": {
                      "type": "Ref",
                      "qty": {
                        "type": "PropertyAggregate",
                        "function": "Sum",
                        "property": "ManaValue",
                        "source": {
                          "type": "TurnJournal",
                          "journal": {
                            "type": "SpellsCast"
                          },
                          "scope": "Controller",
                          "filter": {
                            "type": "Typed",
                            "type_filters": [
                              "Card"
                            ],
                            "controller": null,
                            "properties": [
                              {
                                "type": "OtherThanTriggerObject"
                              }
                            ]
                          }
                        }
                      }
                    },
                    "target": {
                      "type": "Typed",
                      "type_filters": [
                        "Creature"
                      ],
                      "controller": "Opponent",
                      "properties": []
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Spell",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null
          },
          "die_results": [],
          "root_transforms": [
            {
              "SetMinXValue": 0
            },
            {
              "SetDescription": "~ deals damage to each creature your opponents control equal to the total mana value of other spells you've cast this turn."
            }
          ]
        }
      }
    }
  ],
  "source_text": "Cascade, cascade (When you cast this spell, exile cards from the top of your library until you exile a nonland card that costs less. You may cast it without paying its mana cost. Put the exiled cards on the bottom of your library in a random order. Then do it again.)\nCall Forth the Tempest deals damage to each creature your opponents control equal to the total mana value of other spells you've cast this turn.",
  "card_name": "Call Forth the Tempest"
}
