crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__carbonize_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 135,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "~ deals 3 damage to any target. If it's a creature, it can't be regenerated this turn, and if it would die this turn, exile it instead."
      },
      "node": {
        "Spell": {
          "source_text": "~ deals 3 damage to any target. If it's a creature, it can't be regenerated this turn, and if it would die this turn, exile it instead.",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 30,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "~ deals 3 damage to any target"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "DealDamage",
                    "amount": {
                      "type": "Fixed",
                      "value": 3
                    },
                    "target": {
                      "type": "Any"
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 1,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 2
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 32,
                    "end_byte": 134,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 1
                  },
                  "fragment": "If it's a creature, it can't be regenerated this turn, and if it would die this turn, exile it instead"
                },
                "disposition": {
                  "Absorb": {
                    "rider": {
                      "kind": "Spell",
                      "effect": {
                        "type": "GenericEffect",
                        "static_abilities": [
                          {
                            "mode": "CantBeRegenerated",
                            "affected": {
                              "type": "ParentTarget"
                            },
                            "modifications": [
                              {
                                "type": "AddStaticMode",
                                "mode": "CantBeRegenerated"
                              }
                            ],
                            "condition": null,
                            "affected_zone": null,
                            "effect_zone": null,
                            "active_zones": [],
                            "characteristic_defining": false,
                            "description": null
                          }
                        ],
                        "duration": "UntilEndOfTurn",
                        "target": {
                          "type": "TrackedSet",
                          "id": 0
                        }
                      },
                      "cost": null,
                      "sub_ability": null,
                      "duration": "UntilEndOfTurn",
                      "description": null,
                      "target_prompt": null,
                      "condition": {
                        "type": "TargetMatchesFilter",
                        "filter": {
                          "type": "Typed",
                          "type_filters": [
                            "Creature"
                          ],
                          "controller": null,
                          "properties": []
                        },
                        "use_lki": true
                      },
                      "optional_targeting": false,
                      "optional": false,
                      "forward_result": false
                    },
                    "kind": "CantBeRegenerated"
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Unimplemented",
                    "name": "cant_be_regenerated_rider_placeholder",
                    "description": ""
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 2,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 3
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 134,
                    "end_byte": 134,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 2
                  },
                  "fragment": "If it's a creature, it can't be regenerated this turn, and if it would die this turn, exile it instead"
                },
                "disposition": {
                  "Absorb": {
                    "rider": {
                      "kind": "Spell",
                      "effect": {
                        "type": "AddTargetReplacement",
                        "replacement": {
                          "event": "Moved",
                          "execute": {
                            "kind": "Spell",
                            "effect": {
                              "type": "ChangeZone",
                              "origin": "Battlefield",
                              "destination": "Exile",
                              "target": {
                                "type": "SelfRef"
                              },
                              "owner_library": false,
                              "enter_transformed": false,
                              "enter_tapped": false,
                              "enters_attacking": false
                            },
                            "cost": null,
                            "sub_ability": null,
                            "duration": null,
                            "description": null,
                            "target_prompt": null,
                            "condition": null,
                            "optional_targeting": false,
                            "optional": false,
                            "forward_result": false
                          },
                          "mode": {
                            "type": "Mandatory"
                          },
                          "valid_card": {
                            "type": "SelfRef"
                          },
                          "description": null,
                          "condition": null,
                          "destination_zone": "Graveyard",
                          "consume_on_apply": true,
                          "expiry": {
                            "type": "EndOfTurn"
                          }
                        },
                        "target": {
                          "type": "Any"
                        }
                      },
                      "cost": null,
                      "sub_ability": null,
                      "duration": null,
                      "description": null,
                      "target_prompt": null,
                      "condition": {
                        "type": "TargetMatchesFilter",
                        "filter": {
                          "type": "Typed",
                          "type_filters": [
                            "Creature"
                          ],
                          "controller": null,
                          "properties": []
                        },
                        "use_lki": true
                      },
                      "optional_targeting": false,
                      "optional": false,
                      "forward_result": false
                    },
                    "kind": "DieExile"
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Unimplemented",
                    "name": "die_exile_rider_placeholder",
                    "description": ""
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Spell",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null
          },
          "die_results": [],
          "root_transforms": [
            {
              "SetMinXValue": 0
            },
            {
              "SetDescription": "~ deals 3 damage to any target. If it's a creature, it can't be regenerated this turn, and if it would die this turn, exile it instead."
            }
          ]
        }
      }
    }
  ],
  "source_text": "Carbonize deals 3 damage to any target. If it's a creature, it can't be regenerated this turn, and if it would die this turn, exile it instead.",
  "card_name": "Carbonize"
}
